Create Appsettings JSON Structure Models

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,33 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "MovieProSettings": {
+      "TmDbApiKey": "",
+      "DefaultBackdropSize": "orignal",
+      "DefaultPosterSize": "w500",
+      "DefaultYoutubeKey": "Bq2f18iD67Y",
+      "DefaultCastImage": "/images/DefaultCastCrew.jpg",
+      "DefaultCollection": {
+        "Name": "All",
+        "Description": "All imported movies will automatically be assigned to the 'All' Collection."
+      },
+      "DefaultCredentials": {
+        "Role": "Administrator",
+        "Email": "Administrator@mail.com",
+        "Password": ""
+      }
+    },
+    "TmDbSettings": {
+      "BaseUrl": "https://api.themoviedb.org/3/",
+      "BaseImagePath": "https://image.tmdb.org/t/p",
+      "BaseYoutubePath": "https://www.youtube.com/watch?v=",
+      "QueryOptions": {
+        "Language": "en-US",
+        "AppendToResponse": "videos,release_dates,credits",
+        "Page": "1"
+      }
+    }
+  }
 }
