--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ artifacts/
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
 
+#appsettings.json
+appsettings.json
+appsettings.Development.json
+
 # StyleCop
 StyleCopReport.xml
 
